# api/controller/error_response.go
@@ -1,9 +1,0 @@
-package controller
-
-type ErrorResponse struct {
-	Message string `json:"error"`
-}
-
-func errorResponse(message string) ErrorResponse {
-	return ErrorResponse{Message: message}
-}
