# api/controller/success_response.go
@@ -1,9 +1,0 @@
-package controller
-
-type SuccessResponse struct {
-	Message string `json:"message"`
-}
-
-func successResponse(message string) SuccessResponse {
-	return SuccessResponse{Message: message}
-}
