# internal/response/error_response.go
@@ -1,0 +1,9 @@
+package response
+
+type errorResponse struct {
+	Message string `json:"error"`
+}
+
+func ErrorResponse(message string) errorResponse {
+	return errorResponse{Message: message}
+}
