# internal/response/success_response.go
@@ -1,0 +1,9 @@
+package response
+
+type successResponse struct {
+	Message string `json:"message"`
+}
+
+func SuccessResponse(message string) successResponse {
+	return successResponse{Message: message}
+}
